[gd_scene load_steps=8 format=2]

[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/MainMenu/IndexButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/MainMenu/Start.gd" type="Script" id=5]
[ext_resource path="res://Game/MainMenu/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )
option_scene = "res://Game/Options/Options.tscn"
index_scene = "res://Game/Index/FishIndex/FishIndex.tscn"

[node name="Pond" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="CanvasLayer/UI"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = 72.0
margin_right = 116.0
margin_bottom = 272.0
rect_min_size = Vector2( 232, 200 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer/UI/Labels/VBoxContainer"]
margin_right = 232.0
margin_bottom = 56.0
rect_min_size = Vector2( 232, 56 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="CanvasLayer/UI/Labels/VBoxContainer/StartButton"]
margin_right = 234.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 117, 34 )
custom_fonts/font = SubResource( 1 )
text = "start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/Labels/VBoxContainer/StartButton/StartLabel"]

[node name="IndexButton" type="Button" parent="CanvasLayer/UI/Labels/VBoxContainer"]
margin_top = 81.0
margin_right = 232.0
margin_bottom = 137.0
rect_min_size = Vector2( 232, 56 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexLabel" type="Label" parent="CanvasLayer/UI/Labels/VBoxContainer/IndexButton"]
margin_right = 234.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 117, 34 )
custom_fonts/font = SubResource( 1 )
text = "Index"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/Labels/VBoxContainer/IndexButton/IndexLabel"]

[node name="ScreenTransition" parent="CanvasLayer/UI" instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[connection signal="button_down" from="CanvasLayer/UI/Labels/VBoxContainer/StartButton" to="CanvasLayer/UI/Labels/VBoxContainer/StartButton" method="_on_StartButton_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/Labels/VBoxContainer/StartButton" to="CanvasLayer/UI/Labels/VBoxContainer/StartButton" method="_on_StartButton_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/Labels/VBoxContainer/StartButton/StartLabel/Tween" to="CanvasLayer/UI/Labels/VBoxContainer/StartButton" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="CanvasLayer/UI/Labels/VBoxContainer/IndexButton" to="CanvasLayer/UI/Labels/VBoxContainer/IndexButton" method="_on_IndexButton_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/Labels/VBoxContainer/IndexButton" to="CanvasLayer/UI/Labels/VBoxContainer/IndexButton" method="_on_IndexButton_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/Labels/VBoxContainer/IndexButton/IndexLabel/Tween" to="CanvasLayer/UI/Labels/VBoxContainer/IndexButton" method="_on_Tween_tween_all_completed"]
